# MIPT_NLP

./: HW1.ipynb  pyproject.toml
